[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xiaobai"
version = "0.1.0"
description = "小白 — 零成本终端 AI 助手"
readme = "README.md"
authors = [
    {name = "longongzi", email = "longongzi@users.noreply.github.com"}
]
license = "MIT"
keywords = ["ai", "cli", "chatbot", "zero-cost", "terminal"]
requires-python = ">=3.8"
dependencies = []

[project.scripts]
xiaobai = "xiaobai:main"
"小白" = "xiaobai:main"

[project.urls]
Homepage = "https://github.com/longongzi/xiaobai"
BugReports = "https://github.com/longongzi/xiaobai/issues"
